# amazon-freertos-examples

./: CMakeLists.txt
freertos-configs/: aws_demo_config.h  ota_demo_config.h
src/: main.c
